<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="placeholder_text">Placeholder</string>
    <string name="placeholder_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="placeholder_number">200</string>
    <string name="placeholder_number_long">1234567</string>
    <string name="placeholder_date">1 giu 2019</string>
    <string name="app_name">APPartment</string>
    <string name="general_cancel_button">ANNULLA</string>
    <string name="general_continue_button">PROCEDI</string>
    <string name="general_remove_button">RIMUOVI</string>
    <string name="general_leave_home_button">LASCIA CASA</string>
    <string name="general_delete_home_button">ELIMINA CASA</string>
    <string name="general_empty_list">Non c\'è nulla qui!</string>
    <string name="general_members_name">Membri</string>
    <string name="general_no_description_available">Nessuna descrizione</string>
    <string name="general_ok_button">OK</string>
    <string name="general_points_name">Punti</string>
    <string name="transition_open_image">transitionOpenImage</string>
    <string name="error_not_enough_points">Non hai abbastanza punti per richiedere questo premio!</string>
    <string name="form_error_duplicate_email">Questo indirizzo email è già in uso</string>
    <string name="form_error_duplicate_homename">Esiste già una casa con questo nome</string>
    <string name="form_error_duplicate_nickname">Questo nickname è già utilizzato all\'interno della casa</string>
    <string name="form_error_home_already_joined">Sei già membro di questa casa</string>
    <string name="form_error_incorrect_email">Specificare un indirizzo email corretto</string>
    <string name="form_error_incorrect_password">Password non corretta</string>
    <string name="form_error_invalid_characters">Il nome della casa contiene caratteri non validi (.$[]#/)</string>
    <string name="form_error_invalid_date">Specificare una data antecedente a quella odierna</string>
    <string name="form_error_mismatch_password">Le password devono coincidere</string>
    <string name="form_error_missing_value">Specificare un valore</string>
    <string name="form_error_nonexistent_email">Questa email non è associata ad alcun utente</string>
    <string name="form_error_nonexistent_home">Non esiste alcuna casa con questo nome</string>
    <string name="form_error_nonzero_required">Specificare un valore diverso da 0</string>
    <string name="form_error_short_password">Specificare una password con almeno %1$d caratteri</string>
    <string name="snackbar_downgrade_error_message">Non disponi più dei permessi necessari!</string>
    <string name="snackbar_home_deleted_message">La casa in cui ti trovavi è stata eliminata!</string>
    <string name="snackbar_user_kicked_message">Sei stato rimosso dalla casa in cui ti trovavi.</string>
    <string name="desc_completedtasks_homename_taskname_lastcompletiondate">Data di ultimo completamento</string>
    <string name="desc_completedtasks_homename_taskname_lastdescription">Ultima descrizione</string>
    <string name="desc_homes_homename_conversionfactor">Fattore di conversione punti/€</string>
    <string name="desc_homes_homename_name">Nome della casa</string>
    <string name="desc_homes_homename_password">Password della casa</string>
    <string name="desc_homes_homename_password_repeat">Ripeti password della casa</string>
    <string name="desc_homeusers_homename_uid_audioposts">Messaggi vocali pubblicati</string>
    <string name="desc_homeusers_homename_uid_claimedrewards">Premi ottenuti</string>
    <string name="desc_homeusers_homename_uid_completedtasks">Attività completate</string>
    <string name="desc_homeusers_homename_uid_earnedmoney">Soldi guadagnati</string>
    <string name="desc_homeusers_homename_uid_imageposts">Immagini pubblicate</string>
    <string name="desc_homeusers_homename_uid_rejectedtasks">Attività rifiutate</string>
    <string name="desc_homeusers_homename_uid_textposts">Messaggi testuali pubblicati</string>
    <string name="desc_homeusers_homename_uid_totalearnedpoints">Punti totali guadagnati</string>
    <string name="desc_homeusers_homename_uid_audioposts_icon">&#xe3a1;</string>
    <string name="desc_homeusers_homename_uid_claimedrewards_icon">	&#xe8f6;</string>
    <string name="desc_homeusers_homename_uid_completedtasks_icon">	&#xe5ca;</string>
    <string name="desc_homeusers_homename_uid_imageposts_icon">&#xe3f4;</string>
    <string name="desc_homeusers_homename_uid_rejectedtasks_icon">&#xe14c;</string>
    <string name="desc_homeusers_homename_uid_textposts_icon">&#xe0c9;</string>
    <string name="desc_homeusers_homename_uid_totalearnedpoints_icon">&#xe83a;</string>
    <string name="desc_homeusers_homename_uid_nickname">Nickname</string>
    <string name="desc_rewards_homename_rewardid_description">Descrizione</string>
    <string name="desc_rewards_homename_rewardid_name">Nome</string>
    <string name="desc_rewards_homename_rewardid_points">Punti</string>
    <string name="desc_uncompletedtasks_homename_taskid_assignedusername">Utente assegnato (opzionale)</string>
    <string name="desc_uncompletedtasks_homename_taskid_creation_date">Data di creazione</string>
    <string name="desc_uncompletedtasks_homename_taskid_description">Descrizione</string>
    <string name="desc_uncompletedtasks_homename_taskid_name">Nome</string>
    <string name="desc_uncompletedtasks_homename_taskid_points">Punti</string>
    <string name="desc_userhomes_uid_homename_role">Ruolo</string>
    <string name="desc_users_uid_age">Età</string>
    <string name="desc_users_uid_birthdate">Data di nascita</string>
    <string name="desc_users_uid_email">Email</string>
    <string name="desc_users_uid_gender">Genere</string>
    <string name="desc_users_uid_gender_value_female">Femmina</string>
    <string name="desc_users_uid_gender_value_male">Maschio</string>
    <string name="desc_users_uid_name">Nickname</string>
    <string name="desc_users_uid_password">Password</string>
    <string name="desc_users_uid_password_repeat">Ripeti password</string>
    <string-array name="desc_users_uid_gender_values">
        <item>Maschio</item>
        <item>Femmina</item>
    </string-array>
    <string-array name="desc_userhomes_uid_homename_role_values">
        <item>Proprietario</item>
        <item>Leader</item>
        <item>Collaboratore</item>
    </string-array>
    <string name="caption_achievement_logo">Simbolo dell\'achievement</string>
    <string name="caption_app_logo">Logo di APPartment</string>
    <string name="caption_ic_account_circle">Icona di un utente generico</string>
    <string name="caption_ic_arrow">Icona di una freccia</string>
    <string name="caption_ic_attach_money">Simbolo del dollaro</string>
    <string name="caption_ic_audiotrack">Icona di una nota musicale</string>
    <string name="caption_ic_card_giftcard">Icona di un premio</string>
    <string name="caption_ic_check">Simbolo di spunta</string>
    <string name="caption_ic_clear">Icona di una croce</string>
    <string name="caption_ic_home">Icona di una casa</string>
    <string name="caption_ic_hourglass">Icona di una clessidra</string>
    <string name="caption_ic_message">Icona di un messaggio di testo</string>
    <string name="caption_ic_person_add">Icona di nuovo utente</string>
    <string name="caption_ic_photo">Icona di un\'immagine generica</string>
    <string name="caption_ic_play_arrow">Simbolo di play</string>
    <string name="caption_ic_star">Icona di una stella</string>
    <string name="caption_profile_pic">Foto profilo dell\'utente</string>
    <string name="notification_new_post_content">Inviato da %1$s</string>
    <string name="notification_new_post_extended_text">&lt;b>%1$s:&lt;/b> %2$s</string>
    <string name="notification_new_post_extended_audio">&lt;b>%1$s:&lt;/b> &lt;i>Nota vocale&lt;/i></string>
    <string name="notification_new_post_extended_image">&lt;b>%1$s:&lt;/b> &lt;i>Immagine&lt;/i></string>
    <string name="notification_new_reward_request_content">Ci sono nuove richieste di premi in attesa di conferma.</string>
    <string name="notification_new_reward_request_title">Nuova richiesta premio</string>
    <string name="notification_new_task_request_content">Ci sono nuove richieste di completamento in attesa di conferma.</string>
    <string name="notification_new_task_request_title">Nuova richiesta conferma attività</string>
    <string name="notification_role_changed_content">Il tuo ruolo all\'interno della casa %1$s è stato modificato in: %2$s.</string>
    <string name="notification_role_changed_title">Ruolo modificato</string>
    <string name="notification_user_kicked_content">Non fai più parte della casa %1$s.</string>
    <string name="notification_user_kicked_title">Rimozione da una casa</string>
    <plurals name="notification_new_posts_content">
        <item quantity="one">%d nuovo messaggio</item>
        <item quantity="other">%d nuovi messaggi</item>
    </plurals>
    <plurals name="notification_new_posts_title">
        <item quantity="one">Nuovo messaggio in bacheca</item>
        <item quantity="other">Nuovi messaggi in bacheca</item>
    </plurals>
    <string name="activity_completed_task_detail_btn_create_task">Ricrea attività</string>
    <string name="activity_completed_task_detail_btn_delete_history">Pulisci cronologia</string>
    <string name="activity_completed_task_detail_btn_delete_task">Elimina dalle attività completate</string>
    <string name="activity_completed_task_detail_empty_list_text">Nessun completamento registrato nella cronologia.</string>
    <string name="activity_completed_task_detail_text_completions_title">Cronologia completamenti</string>
    <string name="activity_completed_task_detail_title">Dettaglio attività completata</string>
    <string name="activity_create_home_edit_progress_description">Per favore attendi, è in corso l\'aggiornamento dei dati</string>
    <string name="activity_create_home_edit_progress_title">Modifica dati</string>
    <string name="activity_create_home_progress_description">Per favore attendi, è in corso la creazione della casa</string>
    <string name="activity_create_home_progress_title">Creazione casa</string>
    <string name="activity_create_home_text_password_info">La password della casa dovrà essere utilizzata dai nuovi membri per unirsi alla tua casa.</string>
    <string name="activity_enter_btn_login">Accedi</string>
    <string name="activity_enter_btn_signup">Registrati</string>
    <string name="activity_main_bottom_navigation_done">Finite</string>
    <string name="activity_main_bottom_navigation_family">Casa</string>
    <string name="activity_main_bottom_navigation_messages">Bacheca</string>
    <string name="activity_main_bottom_navigation_rewards">Premi</string>
    <string name="activity_main_bottom_navigation_todo">Da fare</string>
    <string name="fragment_reward_text_status_requested_row_1">Premio</string>
    <string name="fragment_reward_text_status_requested_row_2">richiesto</string>
    <string name="activity_user_deletion_title">Elimina account</string>
    <string name="caption_ic_delete">Icona di un cestino</string>
    <string name="activity_user_deletion_text_info">Per procedere con l\'eliminazione, reinserisci la tua password.</string>
    <string name="activity_user_deletion_text_confirm">Confermo di voler eliminare il mio account e tutti i dati ad esso associati.</string>
    <string name="activity_user_deletion_btn_delete">Elimina account</string>
</resources>