<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/activity_main_bottom_navigation_messages"
          android:title="@string/activity_main_bottom_navigation_messages"
          android:icon="@drawable/ic_messages"/>
    <item android:id="@+id/activity_main_bottom_navigation_todo"
        android:title="@string/activity_main_bottom_navigation_todo"
        android:icon="@drawable/ic_todo"/>
    <item android:id="@+id/activity_main_bottom_navigation_done"
        android:title="@string/activity_main_bottom_navigation_done"
        android:icon="@drawable/ic_done"/>
    <item android:id="@+id/activity_main_bottom_navigation_family"
        android:title="@string/activity_main_bottom_navigation_family"
        android:icon="@drawable/ic_family"/>
    <item android:id="@+id/activity_main_bottom_navigation_rewards"
        android:title="@string/activity_main_bottom_navigation_rewards"
        android:icon="@drawable/ic_rewards"/>
</menu>