<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_requested_reward"
    style="@style/Component.Layout.ListItem">

    <ImageView
        android:id="@+id/fragment_reward_img_hourglass"
        style="@style/Component.ImageView.ListItemIcon"
        android:contentDescription="@string/caption_ic_hourglass"
        android:src="@drawable/ic_hourglass_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_reward_layout_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_reward_layout_name"
        app:layout_constraintStart_toEndOf="@id/fragment_reward_img_hourglass"
        app:layout_constraintEnd_toStartOf="@id/fragment_reward_layout_points"
        app:layout_constraintTop_toTopOf="@id/fragment_reward_layout_points"
        app:layout_constraintBottom_toBottomOf="@id/fragment_reward_layout_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_reward_text_name"
            android:text="@string/placeholder_text_long"
            style="@style/Component.TextView.SingleLine.ListItemTitle"
            app:layout_constraintBottom_toTopOf="@id/fragment_reward_text_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_reward_text_description"
            android:text="@string/placeholder_text_long"
            style="@style/Component.TextView.SingleLine.ListItemDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_reward_text_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_reward_layout_points"
        style="@style/Component.Layout.Points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_reward_layout_name"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fragment_reward_text_points_status_upper"
            style="@style/Component.TextView.SingleLine.PointsValue"
            android:textSize="@dimen/text_medium"
            android:text="@string/fragment_reward_text_status_requested_row_1"
            app:layout_constraintBottom_toTopOf="@id/fragment_reward_text_points_status_lower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_reward_text_points_status_lower"
            style="@style/Component.TextView.SingleLine.PointsName"
            android:text="@string/fragment_reward_text_status_requested_row_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/fragment_reward_text_points_status_upper"
            app:layout_constraintStart_toStartOf="@id/fragment_reward_text_points_status_upper"
            app:layout_constraintTop_toBottomOf="@id/fragment_reward_text_points_status_upper" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
