<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".activities.UserDeletionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_user_deletion_appbar"
        style="@style/Component.AppBarWithBackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_user_deletion_toolbar"
            style="@style/Component.ToolbarWithBackButton"
            app:title="@string/activity_user_deletion_title" />
    </com.google.android.material.appbar.AppBarLayout>
    
    <ScrollView
        android:id="@+id/activity_user_deletion_scroll"
        style="@style/Component.ScrollView"
        app:layout_constraintBottom_toTopOf="@id/activity_user_deletion_btn_delete"
        app:layout_constraintTop_toBottomOf="@id/activity_user_deletion_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    
        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Component.Layout.ScrollViewChild">
    
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_user_deletion_layout_title"
                style="@style/Component.Layout.Header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/activity_user_deletion_text_info"
                app:layout_constraintVertical_bias="0.5">
    
                <TextView
                    android:id="@+id/activity_user_deletion_text_title"
                    style="@style/Component.TextView.MultiLine.FancyTitleWithImage"
                    android:text="@string/activity_user_deletion_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/activity_user_deletion_img_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
    
                <ImageView
                    android:id="@+id/activity_user_deletion_img_title"
                    style="@style/Component.ImageView.FancyTitleImage"
                    android:contentDescription="@string/caption_ic_delete"
                    app:layout_constraintBottom_toBottomOf="@id/activity_user_deletion_text_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/activity_user_deletion_text_title"
                    app:layout_constraintTop_toTopOf="@id/activity_user_deletion_text_title"
                    app:srcCompat="@drawable/ic_delete" />
    
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/activity_user_deletion_text_info"
                style="@style/Component.TextView.MultiLine.TextWithDrawableLeft"
                android:drawableStart="@drawable/ic_info_outline_color_6a1b9a"
                android:text="@string/activity_user_deletion_text_info"
                app:layout_constraintBottom_toTopOf="@id/activity_user_deletion_input_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_user_deletion_layout_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_user_deletion_input_password"
                style="@style/CustomFormTextFieldLayout"
                android:hint="@string/desc_users_uid_password"
                app:layout_constraintBottom_toTopOf="@id/activity_user_deletion_check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_user_deletion_text_info">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_user_deletion_input_password_value"
                    style="@style/CustomFormTextFieldInput"
                    android:maxLength="256"
                    android:inputType="textPassword" />
    
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/activity_user_deletion_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_user_deletion_text_confirm"
                style="@style/Component.TextView.MultiLine"
                android:layout_marginTop="@dimen/margin_extra_small"
                android:layout_marginBottom="@dimen/margin_extra_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/activity_user_deletion_input_password" />

            <!--<TextView-->
                <!--android:id="@+id/activity_user_deletion_text_confirm"-->
                <!--style="@style/Component"-->
                <!--android:textColor="@color/colorPrimaryLight"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toEndOf="@id/activity_user_deletion_check"-->
                <!--app:layout_constraintTop_toTopOf="@id/activity_user_deletion_check"-->
                <!--app:layout_constraintVertical_bias="0"-->
                <!--android:text="@string/activity_user_deletion_text_confirm" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_user_deletion_btn_delete"
        style="@style/Component.Button"
        android:backgroundTint="@color/delete_user_button_color"
        android:enabled="false"
        android:text="@string/activity_user_deletion_btn_delete"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_user_deletion_scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>